--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    --font-01: 'PT Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/*PAGE HOME*/
+.header-home{background-color: #131111ad;}
+
+.link-page-home{
+    font-family: var(--font-01);
+    cursor: pointer;
+    color: ghostwhite;
+    margin: 0 8px;
+    font-size: 0.9rem;
+
 }
+.link-page-home:hover{opacity: 75%;}
+
+.div-logo-home{
+   position: absolute;
+   top: 0;
+   left: 5%;
+   width: 200px;
+   height: 150px; 
+   z-index: 100;
+   background-color: white;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius: 0 0 25px 25px ;
+}
+.div-logo-home::before{
+  content: "";
+  position: absolute;
+  
+  background-color: transparent;
+  top: 0;
+  left: 100%;
+  height: 100px;
+  width: 400px;
+  border-top-left-radius: 25px;
+  box-shadow: -35px 0 0 0 white;
+}
+
+.div-logo-home::after{
+    content: "";
+    position: absolute;
+    
+    background-color: transparent;
+    top: 0;
+    left: -25%;
+    height: 95px;
+    width: 50px;
+    border-top-right-radius: 25px;
+    box-shadow: 20px -1px 0 0 white;
+  }
