--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,40 @@
 
 }
 .date-hover:hover{
-  background-color: #222;
+  background-color: #222222a9;
   color: #fff;
   font-weight: 700;
 }
 
+
+.cupom-icon:focus-within{
+  border:1px solid transparent;
+  outline: 1px solid transparent;
+}
+
+
+.pesquisar-hover{cursor: pointer; font-size: 1.05rem;}
+
+.pesquisar-hover:hover{font-size: 1.1rem;}
+
+
+
+
+
+.trigger{cursor: pointer;}
+.trigger:hover{text-decoration: underline ;}
+
+
+
+.hover-slide{
+   font-variant-caps: small-caps;
+   cursor: pointer;
+   color: gray;
+   padding: 7px;
+   transition: all 0.4s linear;
+  }
+
+  .hover-slide:hover{
+    background-color: #222;
+    color: white;
+  }
