--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 .link-page-home{
     font-family: var(--font-01);
     cursor: pointer;
-    color: wheat;
+    color:#22222286;
     margin: 0 8px;
     font-size: 0.9rem;
 
@@ -52,7 +52,6 @@
 .div-logo-home::after{
     content: "";
     position: absolute;
-    
     background-color: transparent;
     top: 0;
     left: -25%;
@@ -91,20 +90,16 @@
 
 
 
-.trigger{cursor: pointer;}
-.trigger:hover{text-decoration: underline ;}
 
-
-
-.hover-slide{
-   font-variant-caps: small-caps;
+.trigger-slide{
+   font-variant-caps: all-small-caps;
    cursor: pointer;
    color: gray;
-   padding: 7px;
-   transition: all 0.4s linear;
+   transition: all 0.2 linear;  
   }
 
-  .hover-slide:hover{
-    background-color: #222;
-    color: white;
-  }
+  .trigger-slide:hover{ text-decoration: underline; }
+
+  .img-slide{cursor: pointer; transition: all 0.4s linear; }
+  .img-slide:hover{transform: scale(1.2);}
+
