--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,12 @@
     background-color: rgba(109, 21, 6, 0.836);
   }
 
+
+
+  p.truncar-3l{
+    display: -webkit-box;  /* webkit-box é um display ue permite esse tipo de truncamento */
+    -webkit-line-clamp: 3; /* indica que esse truncamento será de 3 linhas */
+    -webkit-box-orient: vertical; /* a orientação será na vertical */
+    overflow: hidden; /* o exedente ficará escondido */
+    text-overflow: ellipsis; 
+}
