--- a/src/index.css
+++ b/src/index.css
@@ -193,4 +193,10 @@
 
 
 
+.whatsHover:hover{ opacity: 75%; border:2px solid grey }
+.bookingHover:hover{ opacity: 75%; border:2px solid grey }
+
+
+
+
 
