--- a/src/index.css
+++ b/src/index.css
@@ -176,10 +176,6 @@
 .reservasHover{cursor: pointer;}
 .reservasHover:hover{ text-decoration: underline; opacity:70% }
 
-.enderecoHover{cursor: pointer;}
-.enderecoHover:hover{ text-decoration: underline; opacity:70% }
-
-
 
 
 
@@ -187,7 +183,7 @@
 .instaHover{background-color: silver;  cursor: pointer; transition: all 0.5s linear; }
 .tripHover{background-color: silver;  cursor: pointer; transition: all 0.5s linear; }
 
-.instaHover:hover{background-image: linear-gradient(to top, rgba(0, 0, 0, 0.568), yellow , rgba(255, 0, 0, 0.836) );}
+.instaHover:hover{background-image: linear-gradient(to top, yellow , rgba(255, 0, 0, 0.836) );}
 .youTubeHover:hover{background-color: red ;}
 .tripHover:hover{background-color: aqua ;}
 
